{{$NEXT}}

0.000097  2017-12-10 20:23:21-08:00 America/Los_Angeles

    - Documentation fixes

0.000096  2017-12-09 10:13:21-08:00 America/Los_Angeles

    - No changes since last trial

0.000095  2017-12-08 14:14:16-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Discoruage use of fragile thread features (rarely used)
    - Skip fragile/discrouaged tests outside author testing.
    - Document the above, and an env var to activate tests when desired

0.000094  2017-11-29 18:51:54-08:00 America/Los_Angeles

    - No Changes since last trial

0.000093  2017-11-28 20:21:09-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Minor test changes for thread safety

0.000092  2017-11-28 10:17:37-08:00 America/Los_Angeles

    - No changes since last trial

0.000091  2017-11-27 14:17:00-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Remove experiments from last several trials

0.000090  2017-11-26 18:52:06-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix potential infinite hang in temp debugging

0.000089  2017-11-26 11:16:15-08:00 America/Los_Angeles (TRIAL RELEASE)

    - More debugging

0.000088  2017-11-26 10:18:46-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add some debugging and an alternate IPC driver
    - Temporary, this will be reverted

0.000087  2017-11-24 12:28:27-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Merge in Test2::Workflow
    - Merge in Test2::AsyncSubtest
    - Merge in Test2::Manual

Test2-Suite 0.000086  2017-11-22 22:15:41-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Make an AUTHOR_TEST require 5.20

Test2-Suite 0.000085  2017-11-22 22:05:11-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Ensure that objects are not used in Boolean contexts, second
      attempt. (djerius)

Test2-Suite 0.000084  2017-11-18 16:17:29-08:00 America/Los_Angeles

    - Add Test2::Tools::Tester

Test2-Suite 0.000083  2017-10-25 08:12:18-07:00 America/Los_Angeles

    - Mark a float tests TODO until the PR author can fix it
